[gd_scene load_steps=3 format=2]

[ext_resource path="res://inv1.gd" type="Script" id=1]
[ext_resource path="res://txy/inventory/inventory_collections/apple_trees.gd" type="Script" id=2]

[node name="apple_trees" type="Node2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
script = ExtResource( 1 )

[node name="Pickable_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pickable_area"]

[node name="growth_timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="body_entered" from="Pickable_area" to="." method="_on_Pickable_area_body_entered"]
[connection signal="body_exited" from="Pickable_area" to="." method="_on_Pickable_area_body_exited"]
[connection signal="timeout" from="growth_timer" to="." method="_on_growth_timer_timeout"]
